<?xml version="1.0" encoding="utf-8"?>

<!--
Copyright 2009 David Revell

This file is part of SwiFTP.

SwiFTP is free software: you can redistribute it and/or modify
it under the terms of the GNU General Public License as published by
the Free Software Foundation, either version 3 of the License, or
(at your option) any later version.

SwiFTP is distributed in the hope that it will be useful,
but WITHOUT ANY WARRANTY; without even the implied warranty of
MERCHANTABILITY or FITNESS FOR A PARTICULAR PURPOSE.  See the
GNU General Public License for more details.

You should have received a copy of the GNU General Public License
along with SwiFTP.  If not, see <http://www.gnu.org/licenses/>.
-->

<ScrollView xmlns:android="http://schemas.android.com/apk/res/android"
	android:layout_width="fill_parent"
	android:layout_height="fill_parent"
	>

<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="fill_parent" android:layout_height="fill_parent"
    android:orientation="vertical"
   	>
    
    <TextView 
    	android:id="@+id/menu_top_text" 
    	android:layout_height="wrap_content"
    	android:layout_width="wrap_content"
    	android:text="@string/menu_top_string"
    	android:textSize="20sp"
    	android:textColor="#ffffff" 
    	/>
    
    <LinearLayout 
    	android:layout_width="fill_parent"
    	android:layout_height="wrap_content"
    	android:orientation="horizontal"
	>    	
<!--	This was cluttering the UI-->
<!--    <TextView -->
<!--    	android:layout_height="wrap_content"-->
<!--    	android:layout_width="wrap_content"-->
<!--    	android:text="@string/submit_bug_reports"-->
<!--    	android:textSize="12sp" -->
<!--    	/>-->
    
    <TextView 
    	android:id="@+id/menu_url" 
    	android:layout_height="wrap_content"
    	android:layout_width="wrap_content"
    	android:text="@string/menu_url"
    	android:textSize="12sp" 
    	android:textColor="#ffffff"
    	/>
    </LinearLayout>
    <TextView 
    	android:layout_height="wrap_content"
    	android:layout_width="wrap_content"
    	android:text="@string/menu_byline"
    	android:textSize="12sp" 
    	/>

		
    <!--  A horizontal line -->
	<FrameLayout android:layout_height="1px"
		android:layout_width="fill_parent"
		android:background="#666666"
		>
	</FrameLayout>
	
	<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    	android:layout_width="fill_parent" android:layout_height="wrap_content"
    	android:gravity="center_horizontal"
    	android:orientation="vertical"
    	>
    	
		<LinearLayout 
			xmlns:android="http://schemas.android.com/apk/res/android"
			android:layout_height="wrap_content"
			android:layout_width="fill_parent"
			android:orientation="horizontal"
			android:gravity="center"
			>
			<Button
				android:id="@+id/start_stop_button" 
				android:layout_height="wrap_content"
				android:layout_width="wrap_content"
				android:text="@string/start_server"
				/>
			<Button
				android:id="@+id/wifi_button" 
				android:layout_height="wrap_content"
				android:layout_width="wrap_content"
				android:text="@string/enable_wifi"
				/>
			<Button
				android:id="@+id/instructions"
				android:layout_height="wrap_content"
				android:layout_width="wrap_content"
				android:text="@string/instructions_label"
				/>
			<Button
				android:id="@+id/setup"
				android:layout_height="wrap_content"
				android:layout_width="wrap_content"
				android:text="@string/setup_label"
				/>
		</LinearLayout>		
<!--		<Button-->
<!--			android:id="@+id/add_user_button" -->
<!--			android:layout_height="wrap_content"-->
<!--			android:layout_width="fill_parent"-->
<!--			android:text="@string/add_user"-->
<!--			>-->
<!--		</Button>-->
<!--		<Button-->
<!--			android:id="@+id/manage_users_button" -->
<!--			android:layout_height="wrap_content"-->
<!--			android:layout_width="fill_parent"-->
<!--			android:text="@string/manage_users"-->
<!--			>-->
<!--		</Button>-->
<!--		<Button-->
<!--			android:id="@+id/server_options_button" -->
<!--			android:layout_height="wrap_content"-->
<!--			android:layout_width="fill_parent"-->
<!--			android:text="@string/server_options"-->
<!--			>-->
<!--		</Button>-->
	</LinearLayout>
	
	<!--  A horizontal line -->
	<FrameLayout android:layout_height="1px"
		android:layout_width="fill_parent"
		android:background="#666666"
		>
	</FrameLayout>
	
	<TableLayout 
		android:layout_width="fill_parent"
		android:layout_height="wrap_content"
		android:shrinkColumns="2">
		<TableRow>
			<TextView
		    	android:layout_height="wrap_content"
	    		android:layout_width="wrap_content"
	    		android:text="@string/server_status"
	    		android:textSize="16sp"
	    		android:gravity="left"
		    	/>
			<!--A small spacer between the columns -->
		    <FrameLayout
		    	android:layout_width="3sp"
		    	android:layout_height="wrap_content"
		    	/>
		   	<TextView
		  		android:id="@+id/server_status" 
	  			android:layout_height="wrap_content"
	  			android:layout_width="wrap_content"
	  			android:text="@string/unknown"
				android:textColor="#ffffff" 
	  			android:textSize="16sp" 
  				/>
  		</TableRow>
  		<TableRow>
  			<TextView
		    	android:layout_height="wrap_content"
		    	android:layout_width="wrap_content"
		    	android:text="@string/my_url_is"
		    	android:textSize="16sp"
		    	android:gravity="left"
	    	/>
			<!--A small spacer between the columns -->
		    <FrameLayout
		    	android:layout_width="3sp"
		    	android:layout_height="wrap_content"
		    	/>
		    <TextView
		    	android:id="@+id/ip_address" 
		    	android:layout_height="wrap_content"
		    	android:layout_width="wrap_content"
		    	android:text="@string/no_url_yet"
		    	android:textSize="16sp"
		    	android:textColor="#ffffff" 
		    />
		</TableRow>
  		<TableRow>
  			<TextView
		    	android:layout_height="wrap_content"
		    	android:layout_width="wrap_content"
		    	android:text="@string/wifi_status"
		    	android:textSize="16sp"
		    	android:gravity="left"
	    	/>
			<!--A small spacer between the columns -->
		    <FrameLayout
		    	android:layout_width="3sp"
		    	android:layout_height="wrap_content"
		    	/>
			<TextView
		  		android:id="@+id/wifi_status" 
	  			android:layout_height="wrap_content"
	  			android:layout_width="wrap_content"
	  			android:text="@string/unknown"
				android:textColor="#ffffff" 
	  			android:textSize="16sp" 
  				/>
  		</TableRow>
  		<TableRow>
  			<TextView
  				android:id="@+id/last_error_label"
		    	android:layout_height="wrap_content"
		    	android:layout_width="wrap_content"
		    	android:text="@string/last_error"
		    	android:textSize="16sp"
		    	android:gravity="left"
		    	android:visibility="gone"
	    	/>
			<!--A small spacer between the columns -->
		    <FrameLayout
		    	android:layout_width="3sp"
		    	android:layout_height="wrap_content"
		    	/>
			<TextView
		  		android:id="@+id/last_error" 
	  			android:layout_height="wrap_content"
	  			android:layout_width="wrap_content"
	  			android:text="@string/unknown"
				android:textColor="#ff0000" 
	  			android:textSize="16sp" 
		    	android:visibility="gone"
  				/>
  		</TableRow>
	</TableLayout>
	
	<!--  A horizontal line -->
	<FrameLayout android:layout_height="1px"
		android:layout_width="fill_parent"
		android:background="#666666"
		>
	</FrameLayout>
	
	<LinearLayout 
		android:orientation="horizontal" 
		android:layout_width="fill_parent"
		android:layout_height="wrap_content">
	
	<TextView
		android:layout_height="wrap_content"
		android:layout_width="wrap_content"
		android:text="@string/server_log"
		android:textColor="#ffffff"
	/>
	<CheckBox
		android:id="@+id/server_log_checkbox" 
		android:layout_height="wrap_content"
		android:layout_width="wrap_content"
		android:checked="false"
	/>
	</LinearLayout>
	
	<TextView
		android:id="@+id/server_log"
		android:layout_width="fill_parent"
		android:layout_height="wrap_content"
		android:background="#333333"
	/>
	
	<!--  A horizontal line -->
	<FrameLayout android:layout_height="1px"
		android:layout_width="fill_parent"
		android:background="#666666"
		android:visibility="gone"
		>
	</FrameLayout>
	
	<LinearLayout 
		android:orientation="horizontal" 
		android:layout_width="fill_parent"
		android:layout_height="wrap_content">
		android:visibility="gone">
	
		<TextView
			android:layout_height="wrap_content"
			android:layout_width="wrap_content"
			android:text="@string/session_monitor"
			android:textColor="#ffffff"
			android:visibility="gone"
		/>
		<CheckBox
			android:id="@+id/session_monitor_checkbox" 
			android:layout_height="wrap_content"
			android:layout_width="wrap_content"
			android:checked="false"
			android:visibility="gone"
		/>
	</LinearLayout>
	
	<TextView
		android:id="@+id/session_monitor"
		android:layout_width="fill_parent"
		android:layout_height="wrap_content"
		android:background="#333333"
		android:visibility="gone"
	/>
	
	<!--  A horizontal line -->
	<FrameLayout android:layout_height="1px"
		android:layout_width="fill_parent"
		android:background="#666666"
		>
	</FrameLayout>
	
	<!--  It's visually pleasing to have some empty space at the bottom -->
	<FrameLayout android:layout_height="15px"
		android:layout_width="fill_parent"
		/>
	
<!--	<LinearLayout -->
<!--		android:orientation="horizontal"-->
<!--		android:textSize="16sp"-->
<!--		android:layout_width="fill_parent"-->
<!--		android:layout_height="wrap_content"-->
<!--		>-->
<!--		<TextView-->
<!--	    	android:layout_height="wrap_content"-->
<!--	    	android:layout_width="wrap_content"-->
<!--	    	android:text="@string/server_status"-->
<!--	    	android:textSize="16sp"-->
<!--	    	android:gravity="left"-->
<!--	    	/>-->
<!--	    <TextView-->
<!--	  		android:id="@+id/server_status" -->
<!--  			android:layout_height="wrap_content"-->
<!--  			android:layout_width="wrap_content"-->
<!--  			android:text="@string/unknown"-->
<!--			android:textColor="#ffffff" -->
<!--  			android:textSize="16sp" -->
<!--  		/>-->
<!--	</LinearLayout>-->
<!--	<LinearLayout -->
<!--		android:orientation="horizontal"-->
<!--		android:textSize="16sp"-->
<!--		android:layout_width="fill_parent"-->
<!--		android:layout_height="wrap_content"-->
<!--		android:textColor="#ffffff" -->
<!--		>-->
<!--		<TextView-->
<!--	    	android:layout_height="wrap_content"-->
<!--	    	android:layout_width="wrap_content"-->
<!--	    	android:text="@string/my_url_is"-->
<!--	    	android:textSize="16sp"-->
<!--	    	android:gravity="left"-->
<!--			android:textColor="#cccccc" -->
<!--	    	/>-->
<!--	    <TextView-->
<!--	    	android:id="@+id/ip_address" -->
<!--	    	android:layout_height="wrap_content"-->
<!--	    	android:layout_width="wrap_content"-->
<!--	    	android:text="@string/no_url_yet"-->
<!--	    	android:textSize="16sp"-->
<!--	    	android:gravity="right"-->
<!--			android:textColor="#ffffff" -->
<!--	    	/>-->
<!--	</LinearLayout>-->
	    	
    
</LinearLayout>
</ScrollView>